<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.MainActivity"
    tools:ignore="RtlHardcoded,RtlSymmetry"
    tools:showIn="@layout/activity_main"
    >
  <Switch
      android:id="@+id/switch_main_test_on_off"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:switchPadding="20dp"
      android:text="@string/main_test_on_off"
      />
  <TextView
      android:id="@+id/textview_main_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/main_change_operator"
      />
  <RadioGroup
      android:id="@+id/radiogroup_main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/main_change_google_account"
      />
  <EditText
      android:id="@+id/edittext_main_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/main_input_hint"
      tools:ignore="Autofill,TextFields"
      />
  <Button
      android:id="@+id/button_main_save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:enabled="false"
      android:text="@string/main_save_button"
      />
</LinearLayout>